# EuterpeSnd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  example-html.html  notes.md
.github/workflows/: auto_format.yml  build_and_test.yml  build_and_test_multiplatform.yml  cmake.yml
apps/: CMakeLists.txt
apps/src/: main.cpp
audioDevice/: CMakeLists.txt
audioDevice/include/: AudioDevice.h
audioDevice/src/: AudioDevice.cpp  RtAudioDevice.cpp  RtAudioDevice.h
audioDevice/test/: AudioDeviceTest.cpp
cmake/: CmakeHelpers.cmake  Sanitiziers.cmake  StaticAnalyzers.cmake  TestingHelpers.cmake
dsp/: CMakeLists.txt
dsp/include/: AdsrEnv.h  AllPassFilter.h  BiquadFilter.h  CombFilter.h  Delay.hpp  DelayLine.h  Lfo.h  ModulatedDelay.h  OnePoleLpf.h  TrapezoidalEnv.h
dsp/src/: AdsrEnv.cpp  BiquadFilter.cpp  Lfo.cpp  TrapezoidalEnv.cpp
dsp/test/: AdsrEnvTest.cpp  BiquadFilterTest.cpp  DelayLineTest.cpp  DelayTest.cpp  LfoTest.cpp
synthtools/: CMakeLists.txt
synthtools/include/: IAudioRender.h  SynthVoice.h  WavetableOsc.h
synthtools/src/: SynthVoice.cpp  WavetableOsc.cpp
synthtools/test/: SynthVoiceTest.cpp  WavetableOscTest.cpp
utilities/: CMakeLists.txt
utilities/include/: AdsrEnv.h  AudioBuffer.h  AudioBufferTools.h  AudioPipeline.h  CircularBuffer.hpp  Conversions.h  DoubleBuffer.h  Fsm.h  Interpolation.h
utilities/src/: AdsrEnv.cpp
utilities/test/: AdsrEnvTest.cpp  CircularBufferTest.cpp  DoubleBufferTest.cpp
